--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "parse_language_id"
+harness = false
+
+[[bench]]
+name = "parse_locale_id"
+harness = false
