--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,17 @@
 name = "unicode-locale-parser"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/kazupon/unicode-locale-parser"
+readme = "README.md"
+license = "MIT"
+categories = ["internationalization"]
+include = [
+  "src/**/*",
+  "benches/*.rs",
+  "Cargo.toml",
+  "LICENSE",
+  "README.md"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
